kubernetes/workload/05-ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    # Toto je potrebne iba pre cert-manager
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    # Toto je potrebne iba pre cert-manager
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx/client_max_body_size: 10m
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  # Toto je potrebne iba pre cert-manager
  tls:
  - hosts:
      - rent-area.com
    secretName: app-tls-cert
  rules:
    - host: rent-area.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fsa-fe
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: fsa-keycloak-http
                port:
                  number: 80
